# iitkgp-erp-login-pypi

./: .gitignore  README.md  otp.py  pyproject.toml  setup.py
.github/: CHANGELOG.md
.github/workflows/: release.yaml
examples/: open_erp.py  server.py
src/: example.py
src/iitkgp_erp_login/: endpoints.py  erp.py  erp_login.py  erp_next_gen.py  erp_otp.py  erp_response_msg.py  errors.py  logger.py  read_mail.py  session_manager.py  test.py  utils.py
tests/: test.py
tests/scripts/: test-publish.sh  update-local.sh
