[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iitkgp_erp_login"
version = "2.1.1"
authors = [
  { name="Arpit Bhardwaj", email="proffapt@pm.me" },
]
description = "A package to automate login process in ERP for IIT-KGP"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "google-auth",
  "google-auth-oauthlib",
  "google-auth-httplib2",
  "google-api-python-client",
  "requests",
  "bs4",
]

[project.urls]
"Homepage" = "https://github.com/proffapt/iitkgp-erp-login-pypi"
"Bug Tracker" = "https://github.com/proffapt/iitkgp-erp-login-pypi/issues"
